--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,7 @@ div {
 .logo {
     width: 70px;
     height: 70px;
-    margin-top: 20px;
-}   
+} 
 .links {
     color: black;
     font-size: 16px;
@@ -62,6 +61,9 @@ div {
 }
 .far-toogle {
     color: white;
+}
+.fa-moon:hover {
+    color: #00704A;
 }
 
 p {
@@ -120,7 +122,7 @@ strong {
 footer {
     margin-top: 8em;
 }
-.icon {
+.Icon {
     padding: 10px;
 }
 .icons {
@@ -128,6 +130,48 @@ footer {
     margin-right: 18px;
     font-size: 25px;
 }
+
+
+
+.topnav {
+    overflow: hidden;
+    position: relative;
+  }
+  
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  #myLinks {
+    display: none;
+  }
+  
+  /* Style navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #00704A;
+    color: black;
+  }
+  
+  /* Style the active link (or home/logo) */
+
+
+
+
 /* For mobile phones: */
 [class*="col-"] {
     width: 100%;
@@ -176,5 +220,31 @@ footer {
     body {
         padding: 15px;
     }
+    
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 400px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
     
 }
